chore: NaturalJoin implemented